<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@drawable/threadbox_background"
    >

    <TextView
        android:id="@+id/thread_boxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ThreadBoxTitle"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ThreadBoxPostedBy"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/thread_boxUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ThreadBoxUser"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="@string/ThreadBoxContent"
        />

</LinearLayout>