<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@drawable/forumbox_background"
    android:paddingHorizontal="15dp"
    android:paddingVertical="25dp"
    android:orientation="vertical"
    android:elevation="6dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:id="@+id/forumbox_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/ForumBoxTitle"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/forumbox_viewbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button1"
            android:text="@string/ForumBoxButtonView"
            android:textSize="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:id="@+id/forumbox_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:paddingHorizontal="12dp"
            android:background="@drawable/category_border"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="start"
            android:text="@string/ForumBoxCategory"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/forumbox_threadvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/ForumBoxDefaultThreadValue"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/ForumBoxThreadText"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/forumbox_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/ForumBoxDescription"
        android:textColor="@color/black"
        android:textSize="23sp" />

</LinearLayout>