<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:scrollbars="none"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:layout_marginVertical="50dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/citu_forumsmobilelogo"
            android:contentDescription="@string/LogoDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/loginregistercontainer1"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:padding="15dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/LoginTitle"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_useroremail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/RegisterEmailLabel"
                android:textColorHint="@color/gray"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="#1AFFFFFF"
                app:hintTextColor="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_useroremail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/RegisterPasswordLabel"
                android:textColorHint="@color/gray"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="#1AFFFFFF"
                app:hintTextColor="@color/white"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_loginbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/button1"
                android:text="@string/LoginButtonLabel"
                android:textAllCaps="false"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RegisterButtonSentence"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="17sp" />


                <TextView
                    android:id="@+id/login_registerbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/LoginRegisterButtonLabel"
                    android:textAllCaps="false"
                    android:textColor="@color/textViewClickable2"
                    android:textIsSelectable="false"
                    android:textSize="17sp"
                    android:clickable="true"
                    android:focusable="true" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>